--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "asgevorg",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "express": "^4.16.4",
     "nodemon": "^2.0.15",
     "socket.io": "^2.2.0"
